--- a/ios/test/Info.plist
+++ b/ios/test/Info.plist
@@ -26,7 +26,7 @@
 	<true/>
 
 <!-- URL Scheme 추가 - google -->
-	<key>CFBundleURLTypes</key>
+	<!-- <key>CFBundleURLTypes</key>
 	<array>
 		<dict>
 			<key>CFBundleTypeRole</key>
@@ -36,8 +36,20 @@
 				<string>${GOOGLE_URL_SCHEME}</string>
 			</array>
 		</dict>
-	</array>
+	</array> -->
 
+	<key>CFBundleURLTypes</key>
+	<array>
+	<dict>
+		<key>CFBundleTypeRole</key>
+		<string>Editor</string>
+		<key>CFBundleURLSchemes</key>
+		<array>
+		<string>coura</string>
+		</array>
+	</dict>
+	</array>
+	
 
 	<key>NSAppTransportSecurity</key>
 	<dict>
