--- a/ios/test/Info.plist
+++ b/ios/test/Info.plist
@@ -25,20 +25,18 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 
-<!-- URL Scheme 추가 - google -->
-	<!-- <key>CFBundleURLTypes</key>
+	<!-- deep link 설정 -->
+	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
-			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>${GOOGLE_URL_SCHEME}</string>
-			</array>
+		<key>CFBundleURLSchemes</key>
+		<array>
+			<string>coura</string>
+		</array>
 		</dict>
-	</array> -->
+	</array>
 
-	<key>CFBundleURLTypes</key>
+	<!-- <key>CFBundleURLTypes</key>
 	<array>
 	<dict>
 		<key>CFBundleTypeRole</key>
@@ -48,7 +46,7 @@
 		<string>coura</string>
 		</array>
 	</dict>
-	</array>
+	</array> -->
 	
 
 	<key>NSAppTransportSecurity</key>
