--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.22.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-permissions": "^5.2.3",
+    "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
     "react-native-svg": "^15.11.1",
@@ -41,6 +43,7 @@
     "@react-native/metro-config": "0.76.6",
     "@react-native/typescript-config": "0.76.6",
     "@types/react": "^18.2.6",
+    "@types/react-native-push-notification": "^8.1.4",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
