[MOB] oauth version success #7

--- a/ios/test/Info.plist
+++ b/ios/test/Info.plist
@@ -33,6 +33,10 @@
 		<array>
 			<string>coura</string>
 		</array>
+		<key>LSApplicationQueriesSchemes</key>
+		<array>
+		<string>coura</string>
+		</array>
 		</dict>
 	</array>
 
