--- a/package.json
+++ b/package.json
@@ -17,15 +17,16 @@
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
     "@supabase/supabase-js": "^2.47.15",
+    "axios": "^1.7.9",
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-dotenv": "^3.4.11",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.22.0",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-safari-view": "^2.1.0",
     "react-native-permissions": "^5.2.3",
     "react-native-push-notification": "^8.1.1",
+    "react-native-safari-view": "^2.1.0",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
     "react-native-svg": "^15.11.1",
@@ -44,8 +45,8 @@
     "@react-native/metro-config": "0.76.6",
     "@react-native/typescript-config": "0.76.6",
     "@types/react": "^18.2.6",
-    "@types/react-native-safari-view": "^2.0.9",
     "@types/react-native-push-notification": "^8.1.4",
+    "@types/react-native-safari-view": "^2.0.9",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
