--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-gesture-handler": "^2.22.0",
     "react-native-keychain": "^9.2.2",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-modalize": "^2.1.1",
     "react-native-permissions": "^5.2.3",
     "react-native-push-notification": "^8.1.1",
     "react-native-safari-view": "^2.1.0",
