--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.22.0",
+    "react-native-in-app-review": "^4.3.3",
     "react-native-keychain": "^9.2.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modalize": "^2.1.1",
