--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "@react-native/typescript-config/tsconfig.json",
   "include": [
     "src",
-    "declarations.d.ts" // 추가
+    "declarations.d.ts", // 추가
+    "env.d.ts", // @env떄문에 
   ]
 }
