--- a/ios/test/Info.plist
+++ b/ios/test/Info.plist
@@ -95,6 +95,7 @@
 		<string>Lato-Regular.ttf</string>
 		<string>Lato-Thin.ttf</string>
 		<string>Lato-ThinItalic.ttf</string>
+		<string>Inter-SemiBold.ttf</string>
 		<string>Pacifico-Regular.ttf</string>
 		<string>Roboto-Italic-VariableFont_wdth,wght.ttf</string>
 		<string>Roboto-VariableFont_wdth,wght.ttf</string>
