--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-in-app-review": "^4.3.3",
     "react-native-keychain": "^9.2.2",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-mail": "^6.1.1",
     "react-native-modalize": "^2.1.1",
     "react-native-permissions": "^5.2.3",
     "react-native-push-notification": "^8.1.1",
