--- a/ios/test/Info.plist
+++ b/ios/test/Info.plist
@@ -30,36 +30,19 @@
 	<string>[REASON]</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>[REASON]</string>
-	<!-- <true/> -->
-
-	<!-- deep link 설정 -->
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
-		<key>CFBundleURLSchemes</key>
-		<array>
-			<string>coura</string>
-		</array>
-		<key>LSApplicationQueriesSchemes</key>
-		<array>
-		<string>coura</string>
-		</array>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>coura</string>
+			</array>
+			<key>LSApplicationQueriesSchemes</key>
+			<array>
+				<string>coura</string>
+			</array>
 		</dict>
 	</array>
-
-	<!-- <key>CFBundleURLTypes</key>
-	<array>
-	<dict>
-		<key>CFBundleTypeRole</key>
-		<string>Editor</string>
-		<key>CFBundleURLSchemes</key>
-		<array>
-		<string>coura</string>
-		</array>
-	</dict>
-	</array> -->
-	
-
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
@@ -153,6 +136,66 @@
 		<string>Roboto_SemiCondensed-SemiBoldItalic.ttf</string>
 		<string>Roboto_SemiCondensed-Thin.ttf</string>
 		<string>Roboto_SemiCondensed-ThinItalic.ttf</string>
+		<string>Alkatra-Bold.ttf</string>
+		<string>Alkatra-Medium.ttf</string>
+		<string>Alkatra-Regular.ttf</string>
+		<string>Alkatra-SemiBold.ttf</string>
+		<string>Alkatra-VariableFont_wght.ttf</string>
+		<string>Inter-Italic-VariableFont_opsz,wght.ttf</string>
+		<string>Inter-VariableFont_opsz,wght.ttf</string>
+		<string>Inter_18pt-Bold.ttf</string>
+		<string>Inter_18pt-Black.ttf</string>
+		<string>Inter_18pt-BlackItalic.ttf</string>
+		<string>Inter_18pt-BoldItalic.ttf</string>
+		<string>Inter_18pt-ExtraBold.ttf</string>
+		<string>Inter_18pt-ExtraBoldItalic.ttf</string>
+		<string>Inter_18pt-ExtraLight.ttf</string>
+		<string>Inter_18pt-ExtraLightItalic.ttf</string>
+		<string>Inter_18pt-Italic.ttf</string>
+		<string>Inter_18pt-Light.ttf</string>
+		<string>Inter_18pt-LightItalic.ttf</string>
+		<string>Inter_18pt-Medium.ttf</string>
+		<string>Inter_18pt-MediumItalic.ttf</string>
+		<string>Inter_18pt-Regular.ttf</string>
+		<string>Inter_18pt-SemiBoldItalic.ttf</string>
+		<string>Inter_18pt-Thin.ttf</string>
+		<string>Inter_18pt-ThinItalic.ttf</string>
+		<string>Inter_24pt-Black.ttf</string>
+		<string>Inter_24pt-BlackItalic.ttf</string>
+		<string>Inter_24pt-Bold.ttf</string>
+		<string>Inter_24pt-BoldItalic.ttf</string>
+		<string>Inter_24pt-ExtraBold.ttf</string>
+		<string>Inter_24pt-ExtraBoldItalic.ttf</string>
+		<string>Inter_24pt-ExtraLight.ttf</string>
+		<string>Inter_24pt-ExtraLightItalic.ttf</string>
+		<string>Inter_24pt-Italic.ttf</string>
+		<string>Inter_24pt-Light.ttf</string>
+		<string>Inter_24pt-LightItalic.ttf</string>
+		<string>Inter_24pt-Medium.ttf</string>
+		<string>Inter_24pt-MediumItalic.ttf</string>
+		<string>Inter_24pt-Regular.ttf</string>
+		<string>Inter_24pt-SemiBold.ttf</string>
+		<string>Inter_24pt-SemiBoldItalic.ttf</string>
+		<string>Inter_24pt-Thin.ttf</string>
+		<string>Inter_24pt-ThinItalic.ttf</string>
+		<string>Inter_28pt-Black.ttf</string>
+		<string>Inter_28pt-BlackItalic.ttf</string>
+		<string>Inter_28pt-Bold.ttf</string>
+		<string>Inter_28pt-BoldItalic.ttf</string>
+		<string>Inter_28pt-ExtraBold.ttf</string>
+		<string>Inter_28pt-ExtraBoldItalic.ttf</string>
+		<string>Inter_28pt-ExtraLight.ttf</string>
+		<string>Inter_28pt-ExtraLightItalic.ttf</string>
+		<string>Inter_28pt-Italic.ttf</string>
+		<string>Inter_28pt-Light.ttf</string>
+		<string>Inter_28pt-LightItalic.ttf</string>
+		<string>Inter_28pt-Medium.ttf</string>
+		<string>Inter_28pt-MediumItalic.ttf</string>
+		<string>Inter_28pt-Regular.ttf</string>
+		<string>Inter_28pt-SemiBold.ttf</string>
+		<string>Inter_28pt-SemiBoldItalic.ttf</string>
+		<string>Inter_28pt-Thin.ttf</string>
+		<string>Inter_28pt-ThinItalic.ttf</string>
 	</array>
 </dict>
 </plist>
