--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
     "react-native-svg": "^15.11.1",
+    "react-native-tracking-transparency": "^0.1.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-webview": "^13.13.1",
     "zustand": "^5.0.3"
