--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,3 +1,5 @@
+use_modular_headers!
+
 def node_require(script)
   # Resolve script with node to allow for hoisting
   require Pod::Executable.execute_command('node', ['-p',
@@ -20,7 +22,7 @@ setup_permissions([
   # 'CalendarsWriteOnly',
   # 'Camera',
   # 'Contacts',
-  'FaceID',
+  # 'FaceID',
   # 'LocationAccuracy',
   # 'LocationAlways',
   # 'LocationWhenInUse',
@@ -36,15 +38,17 @@ setup_permissions([
   # 'StoreKit',
 ])
 
-linkage = ENV['USE_FRAMEWORKS']
-if linkage != nil
-  Pod::UI.puts "Configuring Pod with #{linkage}ally linked Frameworks".green
-  use_frameworks! :linkage => linkage.to_sym
-end
+# linkage = ENV['USE_FRAMEWORKS']
+# if linkage != nil
+#   Pod::UI.puts "Configuring Pod with #{linkage}ally linked Frameworks".green
+#   use_frameworks! :linkage => linkage.to_sym
+# end
 
 target 'test' do
   config = use_native_modules!
-
+  use_frameworks! :linkage => :static # add
+  $RNFirebaseAsStaticFramework = true # add
+  
   use_react_native!(
     :path => config[:reactNativePath],
     # An absolute path to your application root.
