--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-cookies/cookies": "^6.2.1",
     "@react-native-firebase/analytics": "^21.10.0",
     "@react-native-firebase/app": "^21.10.0",
+    "@react-native-firebase/messaging": "^21.10.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
